--- a/build.gradle
+++ b/build.gradle
@@ -195,6 +195,7 @@ dependencies {
     compile ("io.springfox:springfox-swagger2") {
         exclude module: 'mapstruct'
     }
+    compile "org.mapstruct:mapstruct-jdk8:${mapstruct_version}"
     compile "io.springfox:springfox-bean-validators"
     compile "mysql:mysql-connector-java"
     compile "org.mapstruct:mapstruct-jdk8:${mapstruct_version}"
